
headers = files(
	'Acorn/core/Application.h',
	'Acorn/core/Core.h',
	'Acorn/core/CoreConfig.h',
	'Acorn/core/EntryPoint.h',
	'Acorn/core/Log.h',
	'Acorn/core/Platform.h',
	'Acorn/core/Timestep.h',
	'Acorn/core/UUID.h',
	'Acorn/core/Window.h',
	'Acorn/debug/FrameProfiler.h',
	'Acorn/debug/Instrumentor.h',
	'Acorn/debug/Timer.h',
	'Acorn/ecs/components/Components.h',
	'Acorn/ecs/components/SceneCamera.h',
	'Acorn/ecs/components/ScriptableEntity.h',
	# 'Acorn/ecs/components/TSCompiler.h',
	# 'Acorn/ecs/components/V8Script_internals.h',
	# 'Acorn/ecs/components/V8Script.h',
	'Acorn/ecs/Entity.h',
	'Acorn/ecs/Scene.h',
	'Acorn/events/ApplicationEvent.h',
	'Acorn/events/Event.h',
	'Acorn/events/KeyEvent.h',
	'Acorn/events/MouseEvent.h',
	'Acorn/gui/ImGuiLayer.h',
	'Acorn/input/Input.h',
	'Acorn/input/KeyCodes.h',
	'Acorn/input/MouseButtonCodes.h',
	'Acorn/layer/Layer.h',
	'Acorn/layer/LayerStack.h',
	'Acorn/math/Math.h',
	'Acorn/physics/Collider.h',
	'Acorn/renderer/2d/Renderer2D.h',
	'Acorn/renderer/2d/SubTexture2d.h',
	'Acorn/renderer/BatchRenderer.h',
	'Acorn/renderer/Buffer.h',
	'Acorn/renderer/Camera.h',
	'Acorn/renderer/DebugRenderer.h',
	'Acorn/renderer/EditorCamera.h',
	'Acorn/renderer/Framebuffer.h',
	'Acorn/renderer/GraphicsContext.h',
	'Acorn/renderer/RenderCommand.h',
	'Acorn/renderer/Renderer.h',
	'Acorn/renderer/RendererApi.h',
	'Acorn/renderer/Shader.h',
	'Acorn/renderer/Texture.h',
	'Acorn/renderer/UniformBuffer.h',
	'Acorn/renderer/VertexArray.h',
	'Acorn/serialize/Serializer.h',
	'Acorn/templates/OrthographicCameraController.h',
	'Acorn/utils/fonts/IconsFontAwesome4.h',
	# 'Acorn/utils/v8/V8Import.h',
	'Acorn/utils/FileUtils.h',
	'Acorn/utils/FixedQueue.h',
	'Acorn/utils/MathUtils.h',
	'Acorn/utils/PlatformCapabilities.h',
	'Acorn/utils/PlatformUtils.h',
	'Acorn/utils/ThreadSafeQueue.h',
	'platform/opengl/OpenGLBuffer.h',
	'platform/opengl/OpenGLContext.h',
	'platform/opengl/OpenGLFrameBuffer.h',
	'platform/opengl/OpenGLFrameProfiler.h',
	'platform/opengl/OpenGLPlatformCapabilities.h',
	'platform/opengl/OpenGLRendererApi.h',
	'platform/opengl/OpenGLShader.h',
	'platform/opengl/OpenGLTexture.h',
	'platform/opengl/OpenGLUniformBuffer.h',
	'platform/opengl/OpenGLVertexArray.h',
	'platform/windows/window/WindowsWindow.h',
	'platform/windows/WindowsPlatform.h',
	'acorn_export.h',
	'Acorn.h'
)

install_subdir('.', install_dir: 'include', strip_directory: true)